# Orchestack

./: .editorconfig  .gitignore  CLAUDE.md  Makefile  Orchestack_Architecture_Response.md  Orchestack_RFC-004_Onchain_Trust_and_Payments.md  Orchestack_RFC-005_Modularized_Extensibility.md  Orchestack_RFCs_001-004_Bundle.md  SETUP_INSTRUCTIONS.md  TASKS_v1.md  atlas.hcl  go.work  go.work.sum  pyproject.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
connectors/common/: pyproject.toml
connectors/common/orchestack_connector/: __init__.py  attachments.py  base.py  config.py  identity.py  message.py
connectors/discord/: pyproject.toml
connectors/discord/orchestack_connector_discord/: __init__.py  config.py  connector.py  main.py
connectors/email/: pyproject.toml
connectors/email/orchestack_connector_email/: __init__.py  config.py  connector.py  main.py
connectors/slack/: pyproject.toml
connectors/slack/orchestack_connector_slack/: __init__.py  config.py  connector.py  main.py
connectors/telegram/: pyproject.toml
connectors/telegram/orchestack_connector_telegram/: __init__.py  config.py  connector.py  main.py
connectors/webchat/: pyproject.toml
connectors/webchat/orchestack_connector_webchat/: __init__.py  config.py  connector.py  dashboard.py  main.py  widget.py
deploy/ci/github/: ci.yml
deploy/ci/tekton/: pipeline-pr-check.yaml
deploy/compose/: .env.example  Containerfile.connector  Containerfile.go  Containerfile.python  docker-compose.yml  nats-init.sh  vault-init.sh
deploy/helm/orchestack/: Chart.yaml  values.yaml
deploy/helm/orchestack/templates/: _helpers.tpl  configmap.yaml  connector-deployment.yaml  migration-job.yaml  migrations-configmap.yaml  network-policy.yaml  openshift-route.yaml  openshift-scc.yaml  service-deployment.yaml
deploy/operator/: go.mod
deploy/operator/api/v1alpha1/: deepcopy.go  register.go  types.go
deploy/operator/cmd/operator/: main.go
deploy/operator/deploy/: crd.yaml  deployment.yaml  rbac.yaml
deploy/operator/internal/controller/: health.go  reconciler.go
libs/envelope-go/: go.mod
libs/envelope-go/envelope/: envelope.go  envelope_test.go  ulid.go
libs/envelope-py/: pyproject.toml
libs/envelope-py/orchestack_envelope/: __init__.py  envelope.py  idempotency.py  validation.py
libs/envelope-py/tests/: test_envelope.py
libs/envelope-ts/: package.json
libs/envelope-ts/src/: envelope.ts  idempotency.ts  index.ts  trace.ts  ulid.ts  validation.ts
libs/envelope-ts/tests/: envelope.test.ts
libs/storage-py/: pyproject.toml
libs/storage-py/orchestack_storage/: __init__.py  client.py  config.py
libs/storage-py/tests/: test_storage.py
libs/telemetry-go/: go.mod
libs/telemetry-go/telemetry/: telemetry.go
libs/telemetry-py/: pyproject.toml
libs/telemetry-py/orchestack_telemetry/: __init__.py  setup.py
libs/tool-protocol/: pyproject.toml
libs/tool-protocol/orchestack_tool_protocol/: __init__.py  builtins.py  client.py  descriptor.py  server.py
libs/vault-py/: pyproject.toml
libs/vault-py/orchestack_vault/: __init__.py  client.py  config.py
libs/vault-py/tests/: test_vault.py
migrations/: 20260209000001_initial_schema.sql  20260209000002_seed_data.sql  20260209000003_service_columns.sql  20260209000004_agent_seed.sql  atlas.hcl  schema.sql
proto/: extension-manifest.schema.json
proto/envelope/: envelope.schema.json
services/budget-accounting/: pyproject.toml
services/budget-accounting/orchestack_budget_accounting/: __init__.py  config.py  main.py
services/daytona-executor/: go.mod
services/daytona-executor/cmd/: main.go
services/daytona-executor/cmd/daytona-executor/: main.go
services/daytona-executor/internal/handler/: api.go  api_test.go  tools.go
services/daytona-executor/internal/sandbox/: manager.go  store.go  types.go
services/dlp-scanner/: pyproject.toml
services/dlp-scanner/orchestack_dlp_scanner/: __init__.py  config.py  main.py  models.py  scanner.py
services/extension-controller/: go.mod  go.sum
services/extension-controller/cmd/: main.go
services/extension-controller/cmd/extension-controller/: main.go
services/extension-controller/internal/handler/: api.go  api_test.go
services/extension-controller/internal/reconciler/: manifest.go  reconciler.go
services/extension-controller/internal/registry/: store.go  types.go
services/loop-runner/: pyproject.toml
services/loop-runner/orchestack_loop_runner/: __init__.py  config.py  loop.py  main.py
services/memory-plane/: pyproject.toml
services/memory-plane/orchestack_memory_plane/: __init__.py  config.py  main.py  models.py  store.py
services/model-router/: pyproject.toml
services/model-router/orchestack_model_router/: __init__.py  config.py  main.py  models.py  providers.py  router.py
services/policy-evaluator/: go.mod
services/policy-evaluator/cmd/: main.go
services/policy-evaluator/cmd/policy-evaluator/: main.go
services/policy-evaluator/internal/handler/: evaluate.go  evaluate_test.go
services/policy-evaluator/internal/policy/: engine.go  types.go
services/policy-evaluator/internal/store/: postgres.go
services/session-scheduler/: go.mod  go.sum
services/session-scheduler/cmd/: main.go
services/session-scheduler/cmd/session-scheduler/: main.go
services/session-scheduler/internal/handler/: ingress.go  ingress_test.go  store.go
services/session-scheduler/internal/store/: postgres.go
services/task-dispatcher/: go.mod
services/task-dispatcher/cmd/: main.go
services/task-dispatcher/cmd/task-dispatcher/: main.go
services/task-dispatcher/internal/handler/: dispatch.go  dispatch_test.go  store.go
services/task-dispatcher/internal/store/: postgres.go
tools/orchestack-ext/: pyproject.toml
tools/orchestack-ext/orchestack_ext/: __init__.py  cli.py  scaffold.py  schema.py
