[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack"
version = "0.1.0"
description = "Orchestack AI Agent Orchestration Platform"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["orchestack_envelope", "orchestack_telemetry", "orchestack_storage", "orchestack_vault", "orchestack_connector", "orchestack_loop_runner", "orchestack_model_router", "orchestack_budget_accounting", "orchestack_memory_plane", "orchestack_dlp_scanner"]

[tool.pytest.ini_options]
testpaths = ["libs", "services", "connectors"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
