[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-connector-discord"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "orchestack-connector-common",
    "discord.py>=2.3",
    "nats-py>=2.7",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
