[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-connector-email"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "orchestack-connector-common",
    "aioimaplib>=1.1",
    "aiosmtplib>=3.0",
    "nats-py>=2.7",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
