[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-connector-slack"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "orchestack-connector-common",
    "slack-bolt>=1.18",
    "slack-sdk>=3.27",
    "nats-py>=2.7",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
