[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-connector-telegram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "orchestack-connector-common",
    "python-telegram-bot>=21.0",
    "nats-py>=2.7",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
