[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-envelope"
version = "0.1.0"
description = "Event envelope schema and validation for Orchestack"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "ulid-py>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
msgpack = ["msgpack>=1.0"]
