[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-storage"
version = "0.1.0"
description = "Orchestack S3-compatible object storage client"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
]
