[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-telemetry"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]
