[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-tool-protocol"
version = "0.1.0"
description = "Orchestack tool protocol library -- descriptors, clients, servers, and built-in tools"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.5",
    "nats-py>=2.6",
    "httpx>=0.27",
    "fastapi>=0.109",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
