[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestack-memory-plane"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "nats-py>=2.7",
    "orchestack-envelope",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29",
    "minio>=7.2",
    "ulid-py>=1.1",
]
